--- a/tp3_VediaLuciana/src/main/resources/templates/form-cliente.html
+++ b/tp3_VediaLuciana/src/main/resources/templates/form-cliente.html
@@ -11,6 +11,15 @@
     <header id="main-header">
         <h1>Registro de Cliente</h1>
     </header>
+	
+	<!-- Menú de navegación -->
+	  <nav>
+	      <a href="/index#Cntroducción" class="enlace-menu">Introducción</a>
+	      <a href="/index#Contenido" class="nav-link">Contenido</a>
+	      <a href="/index#Conclusion" class="nav-link">Conclusión</a>
+		  <a href="/form-cliente" class="enlace-menu">Formulario Cliente</a><!-- enlace al formulario -->
+	  </nav>
+
 
     <!-- Formulario de Registro de Cliente -->
     <main class="main-content">
@@ -76,7 +85,8 @@
             <label for="acepto-info">Acepto recibir información relativa a la empresa</label><br><br>
 
             <input type="submit" value="Registrar">
-            <input type="button" value="Cancelar">
+            <input type="button" value="Cancelar"><br><br>
+			
         </form>
     </main>
 
