--- a/tp3_VediaLuciana/src/main/resources/templates/index.html
+++ b/tp3_VediaLuciana/src/main/resources/templates/index.html
@@ -14,21 +14,21 @@
 
     <!-- Menú de navegación -->
     <nav>
-        <a href="#seccion1" class="nav-link">Introducción</a>
-        <a href="#seccion2" class="nav-link">Contenido</a>
-        <a href="#seccion3" class="nav-link">Conclusión</a>
+        <a href="#Introducción" class="nav-link">Introducción</a>
+        <a href="#Contenido" class="nav-link">Contenido</a>
+        <a href="#Conclusion" class="nav-link">Conclusión</a>
 		<a href="/form-cliente" class="enlace-menu">Formulario Cliente</a><!-- enlace al formulario -->
     </nav>
 
     <!-- Contenido Principal -->
     <main class="main-content">
-        <section id="seccion1" class="section-content">
+        <section id="Introducción" class="section-content">
             <h2 class="section-title">Introducción</h2>
             <p>Trabajo Práctico Nº3 - Programación Visual.</p>
             <p>En este trabajo abordaremos los conceptos vistos en el Aula de Programacion Visual</p>
         </section>
 
-        <section id="seccion2" class="section-content">
+        <section id="Contenido" class="section-content">
             <h2 class="section-title">Contenido</h2>
             <h3 class="section-subtitle">Temas Cubiertos</h3>
             <p>Los temas que se tratarán en este trabajo son:</p>
@@ -87,7 +87,7 @@
             </table>
         </section>
 
-        <section id="seccion3" class="section-content">
+        <section id="Conclusion" class="section-content">
             <h2 class="section-title">Conclusión</h2>
             <p>La creación de controladores en Spring es otro aspecto clave tratado en el documento. Los controladores permiten manejar las solicitudes HTTP y vincularlas con las vistas correspondientes, lo que es esencial para la interacción usuario-aplicación. La estructura y organización de los controladores influyen directamente en la mantenibilidad y escalabilidad de la aplicación, y el conocimiento adquirido en este apartado es vital para el desarrollo de aplicaciones eficientes y bien estructuradas.</p>
 			<p>Además, la gestión de formularios HTML y el uso de CSS para estilizar la interfaz de usuario son habilidades indispensables para cualquier desarrollador web. Los formularios HTML son la principal herramienta para recopilar información de los usuarios, y su correcta implementación y validación son cruciales para garantizar la integridad y seguridad de los datos. Por otro lado, el uso de CSS no solo mejora la apariencia de la aplicación, sino que también contribuye a una mejor experiencia de usuario, haciendo que la interacción con la aplicación sea más intuitiva y agradable.</p>
