--- a/tp3_VediaLuciana/src/main/resources/static/css/estilos.css
+++ b/tp3_VediaLuciana/src/main/resources/static/css/estilos.css
@@ -76,3 +76,23 @@ aside img {
     color: #fff;
     margin: 0 5px;
 }
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); 
+    z-index: 9999;
+}
+
+#overlay img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+}
