--- a/tp3_VediaLuciana/src/main/resources/templates/form-cliente.html
+++ b/tp3_VediaLuciana/src/main/resources/templates/form-cliente.html
@@ -23,7 +23,7 @@
 
     <!-- Formulario de Registro de Cliente -->
     <main class="main-content">
-        <form action="/submit-client" method="post">
+        <form id="registroForm" action="/submit-client" method="post">
             <label for="dni">DNI:</label>
             <input type="number" id="dni" name="dni" required><br><br>
 
@@ -60,7 +60,7 @@
             	</select><br><br>
 
             <label for="telefono">Número de Teléfono Celular:</label>
-            <input type="text" id="telefono" name="telefono"><br><br>
+            <input type="number" id="telefono" name="telefono"><br><br>
 
             <label>Categorías de Interés:</label><br>
             <input type="checkbox" id="categoria1" name="categorias" value="categoria1">
@@ -75,9 +75,12 @@
             <label for="sugerencias">Sugerencias para la Empresa:</label><br>
             <textarea id="sugerencias" name="sugerencias" rows="4" cols="50"></textarea><br><br>
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required><br><br>
-
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" maxlength="10" minlength="4" required><br><br>
+			<label for="passwordconfirmacion">Confirmar Contraseña:</label>
+			<input type="password" id="passwordconfirmacion" name="passwordconfirmacion" maxlength="10" minlength="4" required><br><br>
+			<span id="error-message" class="error"></span><br><br>
+			
             <input type="checkbox" id="acepto-terminos" name="acepto-terminos" required>
             <label for="acepto-terminos">Acepto los términos y condiciones</label><br><br>
 
@@ -85,11 +88,32 @@
             <label for="acepto-info">Acepto recibir información relativa a la empresa</label><br><br>
 
             <input type="submit" value="Registrar">
-            <input type="button" value="Cancelar"><br><br>
-			
+            <input type="button" value="Cancelar" onclick="window.location.href='/index'"><br><br>
+	
         </form>
+		
+		
+		<div id="overlay" style="display:none;">
+		    <img src="/eastereggs/easteregg.jpg" alt="Imagen Easteregg">
+			<audio id="audio">
+			    <source src="/eastereggs/EsterEgg.mp3" type="audio/mpeg">
+			</audio>
+		</div>		
+		
+ <!-- Easter Egg 😺 -->		
+		<script>
+		    document.getElementById('registroForm').addEventListener('submit', function(event) {
+		        event.preventDefault(); // Evitar el envío del formulario
+		
+		        document.getElementById('overlay').style.display = 'block';
+		
+				document.getElementById('audio').play();
+		    });
+		</script>
+			
     </main>
 
+	
     <!-- Pie de Página -->
     <footer id="main-footer">
         <p>Contacto: programacion.visual@example.com</p>
